templates/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres
spec:
  parentRefs:
  - name: postgres
    sectionName: postgres
  rules:
  - backendRefs:
    - name: postgres
      port: 5432
